
* Changed icons font from octicons to foundicons

* Changed icons font from foundicons to fonteollo

* Removed Octicons font.

* Removed allowed from cache property in config.

* Added ability to hide "Upload To" menu item if
no storage modules setted up in modules.json.

* From now any file minifying only if last modified
time was changed.

* Removed ability to cache files in memory.


2012.12.12, Version 0.1.8

* Added ability to shutdown Cloud Commander
thru terminal command: "cloudcmd exit"

* Fixed bug with showing terminal and viewer
at the same time.

* Fixed bug with appcache config. Windows reads
file not just like Linux.

* Added ability to update thru git.

* Added ability to change charset on terminal only if
it's build in command on win32.

* Fixed bug with testing mode. If was same arguments,
Cloud Commander works in testing mode and server do not
started.

* Added more demo mirrors to readme (appfog, cloudfoundry).

* Removed resize event from jquery-terminal.

* Fixed bug with error code of program execution in terminal.

* Fixed bug with menu itmes edit and view.

* Added function jsLoadOnLoad, thet loads js files
one-by-one, and then calls callback if needed.

* Added function anyloadOnLoad thet loads any files or
elements one-by-one.

* Added function loadModule thet make it easier to connect
new module.

* Fixed bug with context menu hiding (on Esc).
Keys was unbinded.

* Added ability to disable web sockets.

* Moved cloudRequire to srvfunc.js file.

* Fixed bug with directory pathes detection
(used document.location.href, now using 
document.location.origin)

* Fixed bug with keybinding in FireFox
(removed KeyBinding call on window load).

* Fixed bug with getting current url in Firefox.

* Util cleaned up (addClass and removeClass
moved to ie.js).

* Index processing function moved out from
server.js to cloudcmd.js.

* Added ability of authorithation in GitHub.

* Rewrited sizing of names if they are to 
long thru css, from JavaScript.
