@@ -293,7 +293,7 @@
                 CloudServer.NoJS = false;            
             else{
                 CloudServer.NoJS = true;
-                lPath = Util.removeStr(lPath, lNoJS_s);                
+                lPath = Util.removeStr(lPath, lNoJS_s);
             }
             
             /* убираем индекс файловой системы */
