@@ -120,6 +120,8 @@ time was changed.
 
 * Removed ability to cache files in memory.
 
+* Moved extensions from main.js to json/ext.json.
+
 
 2012.12.12, Version 0.1.8
 
